update copyright claim.

--- a/index.html
+++ b/index.html
@@ -123,12 +123,9 @@
 
         <p class="copyright">
           &copy; Copyright by
-          <a
-            class="twitter-link"
-            target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio.
+          <a class="twitter-link" target="_blank" href="https://twitter.com/"
+            >Tanzeem</a
+          >. @2024.
         </p>
       </div>
 
