implemented darkmode feature.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                 </ul>
               </div>
             </li>
+            <li class="nav__item">
+              <button class="nav__btn btn-toggle nav__btn--add-recipe">
+                <svg class="nav__icon">
+                  <use href="src/img/icons.svg#icon-dark"></use>
+                </svg>
+                <span>DARK MODE</span>
+              </button>
+            </li>
           </ul>
         </nav>
       </header>
