updated the copyright claim.

--- a/index.html
+++ b/index.html
@@ -128,10 +128,18 @@
             </svg>
           </button> -->
         </div>
-
         <p class="copyright">
-          &copy; Copyright by
-          <a class="twitter-link" target="_blank" href="https://twitter.com/"
+          &copy; Original project by
+          <a
+            class="twitter-link"
+            target="_blank"
+            href="https://twitter.com/jonasschmedtman"
+            >Jonas Schmedtmann</a
+          >. Rebuilt along the course with additional features by
+          <a
+            class="twitter-link"
+            target="_blank"
+            href="https://twitter.com/Tanzeem_Dev"
             >Tanzeem</a
           >. @2024.
         </p>
